2008-04-09  Andy Wingo  <wingo@pobox.com>

	* test-suite/gobject.test ("defining custom gobject type"): Add a
	test for the construct arg behaviour.

	* gnome/gobject/private.h:
	* gnome/gobject/gtype.c (scm_c_gtype_instance_set_cached): Expose
	this internal piece to gobject.c.

	* gnome/gobject/gobject.c (push_in_construction_from_scheme)
	(pop_in_construction_from_scheme, in_construction_from_scheme):
	Keep a stack of SCM objects under construction.
	(scm_with_c_gtype_instance_instance_init): If there is an object
	under construction, associate it with the GTypeInstance*, so that
	gobject:set-property calls for construct properties see the same
	SCM as the one under construction.

	* gnome/gobject/gvalue.scm (<gboxed-scm>, <gvalue-array>):
	* gnome/gobject/gclosure.scm (<gclosure>): Inherit from <gboxed>,
	because that's how they roll.

2008-04-08  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gtype.h:
	* gnome/gobject/gtype.c: Rewrite to never expose GTypes on the
	Scheme side, rather wrapping GTypes directly as <gtype-class>
	instances. The GType is stored in a <read-only-slot>, which stores
	a raw (untagged) word -- the perfect size for a GType. Hence much
	gtype<->class API has been removed.

	Because a GType is isomorphic to GTypeClass*, the <%gtype-class>
	smob is also gone.

	On the instance side, I also removed the need for
	<%gtype-instance> smobs as well, through interesting trickery: the
	GOOPS objects directly store the GTypeInstance* pointer in a
	<read-only-slot>, as with the <gtype-class> instances. The
	trickery is that we can be notified when the struct is collected,
	via monkeypatching the <gtype-class> objects to free via a custom
	function, scm_gtype_instance_struct_free. This allows us to unref
	the object.

	This low-level trickery happens as part of the object allocation
	and initialization protocol.

	(scm_c_gtype_get_direct_supers): C function to determine the
	superclasses of a given GType: the union of the type's parents and